save intermediate result

--- a/__fixtures__/template.html
+++ b/__fixtures__/template.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" media="all" href="https://cdn2.hexlet.io/assets/menu.css" />
     <link rel="stylesheet" media="all" href="assets/application.css" />
     <link href="/courses" rel="canonical" />
+    <link href="/assets/page.html" rel="canonical">
   </head>
   <body>
     <img src="/assets/nodejs.png" alt="Иконка профессии Node.js-программист" />
