--- a/__fixtures__/template_saved.html
+++ b/__fixtures__/template_saved.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" media="all" href="https://cdn2.hexlet.io/assets/menu.css" />
     <link rel="stylesheet" media="all" href="ru-hexlet-io-courses_files/ru-hexlet-io-assets-application.css" />
     <link href="ru-hexlet-io-courses_files/ru-hexlet-io-courses" rel="canonical" />
+    <link href="ru-hexlet-io-courses_files/ru-hexlet-io-assets-page.html" rel="canonical">
   </head>
   <body>
     <img src="ru-hexlet-io-courses_files/ru-hexlet-io-assets-nodejs.png" alt="Иконка профессии Node.js-программист" />
